recursion.lessons.recursion.dragoncurve.DragonCurve2.scala.error
DragonCurve2:18: error: ')' expected but ';' found.
		dragon(order-1, x, y,(x + z)/2 + (t - y)/2,(y + t)/2 - (z - x)/2;
                                                                                ^